@@ -1419,7 +1419,8 @@ dba.plotMA <- function(DBA, contrast=1, method=DBA$config$AnalysisMethod,
 dba.plotVolcano <- function(DBA, contrast=1, method=DBA$config$AnalysisMethod, 
                             th=DBA$config$th, bUsePval=DBA$config$bUsePval, 
                             fold=0, factor="", bFlip=FALSE, 
-                            bLabels=FALSE, maxLabels=50, dotSize=1)
+                            bLabels=FALSE, maxLabels=50, dotSize=1,
+                            bReturnSites=TRUE)
   
 {
   DBA <- pv.check(DBA,bCheckEmpty=TRUE)
@@ -1427,9 +1428,14 @@ dba.plotVolcano <- function(DBA, contrast=1, method=DBA$config$AnalysisMethod,
   res <- pv.DBAplotVolcano(DBA, contrast=contrast, method=method, 
                            th=th, bUsePval=bUsePval, fold=fold,
                            facname=factor, dotSize=dotSize,
-                           bFlip=bFlip, bLabels=bLabels, maxLabels=maxLabels)
+                           bFlip=bFlip, bLabels=bLabels, maxLabels=maxLabels,
+                           bReturnPlot=!bReturnSites)
   
-  invisible(pv.peaks2DataType(res,datatype=DBA_DATA_GRANGES))
+  if(is(res,"ggplot")) {
+    invisible(res)
+  } else {
+    invisible(pv.peaks2DataType(res,datatype=DBA_DATA_GRANGES))
+  }
 }
 
 
